--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -17,12 +17,12 @@
 
     <servlet-mapping>
         <servlet-name>springMVC</servlet-name>
-        <url-pattern>*.html</url-pattern>
+        <url-pattern>/</url-pattern>
     </servlet-mapping>
 
 
 
     <welcome-file-list>
       <welcome-file>index.jsp</welcome-file>
-  </welcome-file-list>
+    </welcome-file-list>
 </web-app>
