登陆界面login.html log4j

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -8,13 +8,13 @@ log4j.appender.stdout.Target = System.out
 log4j.appender.stdout.layout = org.apache.log4j.PatternLayout 
 log4j.appender.stdout.layout.ConversionPattern = [%5p] [%-d{yyyy-MM-dd HH:mm:ss}] [%t] (%F:%L) -%m%n 
 ### debug file ###
-log4j.appender.D = org.apache.log4j.DailyRollingFileAppender 
-log4j.appender.D.File=${catalina.home}/logs/kepu925.log 
-log4j.appender.D.DatePattern='.'yyyy-MM-dd'.log' 
-log4j.appender.D.Append = true 
-log4j.appender.D.Threshold = DEBUG 
-log4j.appender.D.layout = org.apache.log4j.PatternLayout 
-log4j.appender.D.layout.ConversionPattern = [%5p] [%-d{yyyy-MM-dd HH:mm:ss}] [%t] (%F:%L) -%m%n 
+#log4j.appender.D = org.apache.log4j.DailyRollingFileAppender
+#log4j.appender.D.File=${catalina.home}/logs/kepu925.log
+#log4j.appender.D.DatePattern='.'yyyy-MM-dd'.log'
+#log4j.appender.D.Append = true
+#log4j.appender.D.Threshold = DEBUG
+#log4j.appender.D.layout = org.apache.log4j.PatternLayout
+#log4j.appender.D.layout.ConversionPattern = [%5p] [%-d{yyyy-MM-dd HH:mm:ss}] [%t] (%F:%L) -%m%n
 ### error for sigle file ###
 log4j.appender.E = org.apache.log4j.DailyRollingFileAppender 
 log4j.appender.E.File=${catalina.home}/logs/kepu925_error.log 
